<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sg.com.smartmediasoft.storeclient.MainActivity" >

    <item
        android:id="@+id/action_customer_store"
        android:icon="@drawable/ic_action_storage"
        android:showAsAction="always"
        android:title="@string/description_customer_store"/>
    <item
        android:id="@+id/action_history_order"
        android:icon="@drawable/ic_action_time"
        android:showAsAction="always"
        android:title="@string/description_order_history"/>
    <item
        android:id="@+id/action_new_order"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/main_action_new_order"/>

</menu>