<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_normal"
    android:paddingRight="@dimen/padding_normal"
    android:paddingTop="@dimen/padding_small" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/text_prefix_order_human_id"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_order_human_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium"
            android:textColor="@color/smartmediasoft_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_state_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium"
            android:textColor="@color/smartmediasoft_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_target_time_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_target_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_create_time_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_confirm_time_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_confirm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_deliver_time_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_deliver_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detail_list_header_finish_prefix"
            android:layout_width="@dimen/detail_prefix_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:gravity="right|center_vertical"
            android:text="@string/detail_text_receive_time_prefix"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />

        <TextView
            android:id="@+id/detail_list_header_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Smartmediasoft.Text.Medium" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/detail_text_customer_product_title"
        android:textAppearance="@style/Smartmediasoft.Text.Small"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/padding_mini"
        android:background="@color/format_color_lite_gray" />

</LinearLayout>